# qdmt

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
benchmarks/: test_evolved_hilbert_schmidt_naive.py  test_trotterized_cost.py
data/dissertation/integrable/: bond_dimension_8_patch_size_24.npz
data/dissertation/integrable/fixed_patch_size/patch_size_4/: bond_dimension_4.npz  bond_dimension_6.npz  bond_dimension_8.npz
data/dissertation/non-integrable/: bond_dimension_10_patch_8.npz
data/integrable/: D_10_L_4__2.npz  D_10_patch_4.npz  D_10_patch_6.npz  D_6_L_2.npz  D_8_L_4__2.npz  bond_dimension_6_patch_size_12.npz
data/non_integrable/: bond_dimension_10_patch_size_4.npz  bond_dimension_12_patch_size_4_III.npz  bond_dimension_12_patch_size_6.npz  bond_dimension_13_patch_size_4.npz  bond_dimension_2_patch_size_10.npz  bond_dimension_2_patch_size_4.npz  bond_dimension_2_patch_size_6_II.npz  bond_dimension_2_patch_size_8.npz  bond_dimension_4_patch_size_4.npz  bond_dimension_6_patch_size_4.npz  bond_dimension_8_patch_size+4.npz  bond_dimension_8_patch_size_4.npz  bond_dimension_8_patch_size_6.npz
data/non_integrable/experiment_I/: bond_dimension_12_patch_6--continue_bond_dimension_6_patch_2.npz  bond_dimension_12_patch_6.npz  bond_dimension_8_patch_4.npz
docs/: index.md  installation.md
examples/: README.md  analyze_first.py  data_management.py  datasets.py  get_feeling_for_parameters.py  gradient_checks.py
results/representability/: D_target=10 L=2.npy  D_target=12 L=2 samples=20 temp21 .npy  D_target=12 L=2 samples=20 temp217 .npy  D_target=12 L=2 samples=20 temp218 .npy  D_target=12 L=2 samples=20 temp43 .npy  D_target=12 L=2 samples=20 temp45 .npy  D_target=12 L=2 samples=20 temp47 .npy  D_target=12 L=2 samples=20 temp510 .npy  D_target=12 L=2 samples=20 temp511 .npy  D_target=12 L=2 samples=20 temp516 .npy  D_target=12 L=2 samples=20 temp519 .npy  D_target=12 L=2 samples=20 temp52 .npy  D_target=12 L=2 samples=20 temp64 .npy  D_target=12 L=2 samples=20 temp712 .npy  D_target=12 L=2 samples=20 temp714 .npy  D_target=12 L=2 samples=20 temp813 .npy  D_target=12 L=2 samples=20 temp815 .npy  D_target=12 L=2 samples=20 temp86 .npy  D_target=12 L=2 samples=20 temp98 .npy  D_target=12 L=2 samples=20 temp99 .npy  D_target=12 L=2 samples=20.npy  D_target=20 L=4 samples=10 temp121 .npy  D_target=20 L=4 samples=10 temp127 .npy  D_target=20 L=4 samples=10 temp38 .npy  D_target=20 L=4 samples=10 temp44 .npy  D_target=20 L=4 samples=10 temp46 .npy  D_target=20 L=4 samples=10 temp52 .npy  D_target=20 L=4 samples=10 temp55 .npy  D_target=20 L=4 samples=10 temp59 .npy  D_target=20 L=4 samples=10 temp73 .npy  D_target=20 L=4 samples=10.npy  D_target=20 L=4 samples=20 temp71 .npy
src/analysis/: magnetization.py  tools.py  transverse_magnetisation.py
src/qdmt/: __init__.py  cost.py  evolve.py  fixed_point.py  isometry.py  linesearch.py  manifold.py  model.py  optimisation.py  transfer_matrix.py  uniform_mps.py
src/qdmt/analysis/: __init__.py  benchmark_scaling.py  conserved_quantities.py  correlation_length.py  fixed_point.py  lo_schmidt_echo.py  magnetization.py  reduced_lo_schmidt.py  tools.py  transverse_magnetisation.py
src/qdmt/cost_fns/: __init__.py  base.py  time_evolved_hilbert_schmidt.py
src/qdmt/transfer_matrices/: __init__.py  base.py  second_order.py
src/qdmt/utils_n/: fd.py
tests/: README.md  conftest.py  test_geometry.py  test_mps.py
tests/helpers/: cost.py
tests/unit/: test_cost.py  test_transfer.py
