[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdmt"
version = "0.1.0"
description = "Quantum Density Matrix Truncation using Matrix Product States"
authors = [
    {name = "QDMT Contributors", email = "qdmt@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["quantum", "tensor-networks", "mps", "time-evolution", "physics"]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "ncon>=2.0.0",
    "matplotlib>=3.7.0",
    "opt_einsum>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/qdmt"
Documentation = "https://qdmt.readthedocs.io"
Repository = "https://github.com/yourusername/qdmt"
Issues = "https://github.com/yourusername/qdmt/issues"
Changelog = "https://github.com/yourusername/qdmt/blob/main/CHANGELOG.md"

[project.scripts]
evolve-state = "qdmt.evolve:run_simulation"
plot-schmidt-echo = "qdmt.analysis.lo_schmidt_echo:main"
plot-transverse-magnetisation = "qdmt.analysis.transverse_magnetisation:main"
plot-benchmark-scaling = "qdmt.analysis.benchmark_scaling:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
]
all = ["qdmt[dev,docs,notebooks]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=qdmt",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["src/qdmt"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "NPY", # numpy-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["qdmt"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "ncon",
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true
